partner left... got the numbers to work in a forward fashion

--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
    <link rel="stylesheet" href="css/styles.css">
    <script type="text/javascript" src="js/scripts.js"></script>
-    <title>Roman Numerals</title>
+   <title>Roman Numerals</title>
   </head>
   <body class="container">
     <h1>Roman Numerals</h1>
+    <div id="romanNumeral">
+      <form class="">
+        <input id="input" type="text" name="name" value="">
+        <input type="submit" name="name" value="Find Roman Numerals">
+      </form>
+    </div>
+    <div id="outputNumber">
+      <h2></h2>
+    </div>
   </body>
 </html>
